tests/NormalTests/paczka2/big_fuzzy/46547900.err
Error in line 1: chfx8fBULU A170 85,9
Error in line 2: fU6ZWNLiRK A170 43,2
Error in line 13: h9ssOs1j7U S270 4,1
Error in line 17: chfx8fBULU S546 55,9
Error in line 18: chfx8fBULU S270 23,8
Error in line 20: S270 A732 36,0
Error in line 14: h9ssOs1j7U S546 80,2
Error in line 28: h9ssOs1j7U S270 92,3
Error in line 32: chfx8fBULU A732 40,9
Error in line 33: chfx8fBULU S546 49,5
Error in line 34: chfx8fBULU S270 30,2
Error in line 35: K5Hp8Qs0Hc A732 1,9
Error in line 31: h9ssOs1j7U A170 51,3
Error in line 46: SKcS74 S270 8,1
Error in line 50: 5Gd1uT A170 95,93
Error in line 54: h9ssOs1j7U S270 164,6
Error in line 45: fU6ZWNLiRK A732 47,2
Error in line 68: 5Gd1uT A170 194,0
Error in line 63: K5Hp8Qs0Hc S546 96,1
Error in line 83: K5Hp8Qs0Hc A170 60,0
Error in line 87: fU6ZWNLiRK A732 45,3
Error in line 101: fU6ZWNLiRK A170 291,5
Error in line 105: SKcS74 A732 51,9
Error in line 97: S270 A170 86,7
Error in line 117: h9ssOs1j7U A170 9,0
Error in line 112: chfx8fBULU A170 40,3
Error in line 123: 5Gd1uT A170 99,4
Error in line 124: fU6ZWNLiRK A732 99,2
Error in line 141: K5Hp8Qs0Hc A170 56,3
Error in line 136: SKcS74 S546 1,2
Error in line 145: SKcS74 A732 6,2
Error in line 156: fU6ZWNLiRK A170 5,7
Error in line 163: h9ssOs1j7U S546 247,8
Error in line 154: 5Gd1uT S546 5,7
Error in line 166: h9ssOs1j7U A170 91,9
Error in line 174: 5Gd1uT S270 8,0
Error in line 179: 5Gd1uT S546 75,2
Error in line 185: h9ssOs1j7U A732 44,1
Error in line 191: S|70 A170 |1,7
Error in line 192: K5Hp8Qs0Hc A732 65,8
Error in line 196: K5Hp8Qs0Hc S546 43,4
Error in line 199: SKcS74 S270 21,7
Error in line 203: S270 S270 42,8
Error in line 208: fU6ZWNLiRK A170 31,6
Error in line 207: 5Gd1uT S270 37,0
Error in line 212: fU6ZWNLiRK S270 74,2
Error in line 222: h9ssOs1j7U A732 66,9
Error in line 234: 5Gd1uT S270 89,6
Error in line 224: SKcS74 S546 89,4
Error in line 235: 5Gd1uT S546 72,6
Error in line 233: fU6ZWNLiRK A170 20,3
Error in line 247: S270 A732 75,8
